--- a/html/css/animation/05animate_boxshadow.html
+++ b/html/css/animation/05animate_boxshadow.html
@@ -34,16 +34,6 @@
         overflow: hidden;
       }
 
-      @keyframes move {
-        to {
-          z-index: 6; /* ...to in front of everything */
-          transform: translate(
-              60px,
-              10px
-            )
-            scale(1);
-        }
-      }
       div {
         width: 300px;
         height: 300px;
@@ -73,16 +63,30 @@
             inset -50px 0 300px #0ff;
         */
         /* in order: offset-x, offset-y, blur-radius, color */
-        box-shadow: inset 0 0 50px #f0f;
-        /* 0 0 20px #fff, */
-        /* -20px 0 80px #f0f,
-          20px 0 80px #0ff, */
-        /* same, except these shadows go inwards */
-        /* inset 0 0 50px #fff,
+        box-shadow: 0 0 20px #fff,
+          -20px 0 80px #f0f,
+          20px 0 80px #0ff,
+          /* same, except these shadows go inwards */
+            inset 0 0 50px #fff,
           inset 50px 0 80px #f0f,
           inset -50px 0 80px #0ff,
           inset 50px 0 300px #f0f,
-          inset -50px 0 300px #0ff; */
+          inset -50px 0 300px #0ff;
+        animation: pulsate 6s linear
+          infinite;
+      }
+
+      @keyframes pulsate {
+        50% {
+          box-shadow: 0 0 20px #fff,
+            20px 0 80px #f0f,
+            -20px 0 80px #0ff,
+            inset 0 0 50px #fff,
+            inset -50px 0 80px #f0f,
+            inset 50px 0 80px #0ff,
+            inset -50px 0 300px #f0f,
+            inset 50px 0 300px #0ff;
+        }
       }
     </style>
   </head>
